[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
config = "0.13.4"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
