[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
secrecy = { version = "0.8.0", features = ["serde"] }
sqlx = { version = "0.7.3", default_features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

[dev-dependencies]
reqwest = "0.11.23"

[profile.release]
strip = true
